--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="monetag" content="5858d8535d4e13679c3da553135da621">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
   <title>FreshList — Grocery To‑Do</title>
   <meta name="description" content="Simple, fast grocery to-do list with localStorage. Add, tick, delete and filter items." />
