--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
   <title>FreshList — Grocery To‑Do</title>
   <meta name="description" content="Simple, fast grocery to-do list with localStorage. Add, tick, delete and filter items." />
-
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="176680" async data-cfasync="false"></script>
   <style>
     :root{
       --bg:#f6f7fb;
